# data-science-packages

./: README.md  pyproject.toml  requirements.txt  setup.py
data_science_packages/: eda.py  utils.py
data_science_packages/dask/: eda.py
data_science_packages/ml/: bedrock.py  models.py  nlp.py
